Rewrote and supplemented the authorization validation. Added a dark theme

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
   <title>React App</title>
 </head>
 
-<body>
+<body class="bg-white dark:bg-[#121212] dark:text-black">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" class="flex flex-col bg-[#121212] h-screen"></div>
+  <div id="root" class="flex flex-col h-screen"></div>
 </body>
 
 </html>
