--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <title>React App</title>
 </head>
 
-<body class="bg-white dark:bg-[#121212] dark:text-black">
+<body class="bg-white dark:bg-[#121212] dark:text-black border border-black dark:border-[#475569]">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" class="flex flex-col h-screen"></div>
 </body>
